# Amaze

./: Cargo.toml
resources/: torus.glb
src/: engine.rs  game_loop.rs  main.rs
src/engine/: gamesync.rs  input.rs  object.rs  renderer.rs  terrarin.rs
src/engine/level/: level.rs
src/engine/object/: gameobject.rs  transform.rs
src/engine/renderer/: buffers.rs  camera.rs  graphic_object.rs  material.rs  options.rs  primitives.rs  renderer.rs  swapbuffer.rs  vulkan.rs
src/engine/terrarin/: block.rs  chunk.rs  chunk_generator.rs  world.rs
src/game_loop/: base.rs  helper.rs  time.rs
src/old/: mainOld.rs  mainOld2.rs
