[package]
name = "amaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
winapi = "0.3.9"
winit = "0.26"
bytemuck = "1.8.0"
image = "0.24"
num-traits = "0.2"
glam = "0.20.5"
legion = "0.4.0"
winit_input_helper = "0.12.0"
