[package]
name = "amaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
winapi = "0.3.9"
winit = "0.26"
bytemuck = "1.8.0"
image = "0.24"
num-traits = "0.2"
glam = "0.20.5"
bevy_ecs = "0.7.0"
winit_input_helper = "0.12.0"
easy-gltf="0.1.5"
profiling = "1.0.6"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]